# mural-api-stub

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  compose.debug.yaml  compose.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: check-pull-request.yml  publish-hotfix.yml  publish.yml
app/: config.py
app/auth/: router.py  schemas.py  service.py
app/common/: errors.py  http_client.py  log_utils.py  metrics.py  mongo.py  s3.py  tls.py  tracing.py
app/contents/: errors.py  pagination.py  router.py  schemas.py  service.py  store.py
app/entrypoints/: fastapi.py
app/murals/: errors.py  router.py  schemas.py  service.py  store.py
compose/floci/start.d/: 10-setup-resources.sh
tests/: conftest.py  test_main.py
tests/auth/: test_auth_router.py
tests/common/: test_http_client.py  test_log_utils.py  test_metrics.py  test_mongo.py  test_tls.py
tests/health/: test_health_router.py
