[project]
name = "mural-api-stub"
version = "0.1.0"
description = "mural-api-stub"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-logger==0.1.0",
    "aws-embedded-metrics==3.5.0",
    "dnspython==2.8.0",
    "ecs-logging==2.3.0",
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "pydantic-settings==2.14.1",
    "pymongo[aws,encryption,snappy,zstd]==4.17.0",
    "uvicorn==0.48.0",
    "aiohttp==3.14.0",
    "cryptography==46.0.7",
    "idna==3.15.0",
    "urllib3==2.7.0",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "debugpy==1.8.20",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pydantic-evals==1.102.0",
    "ruff==0.15.14",
    "taskipy==1.14.1",
    "testcontainers==4.14.2",
    "types-aiofiles==25.1.0.20260518",
]

[project.scripts]
mural-api-stub = "app.entrypoints.fastapi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.coverage.run]
branch = true
include = ["app/*"]
omit = ["tests/*"]

[tool.coverage.html]
directory = "coverage/coverage_html"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.taskipy.tasks]
format = "uv run ruff format . && uv run ruff check . --fix"
lint = "uv run ruff format ./app ./tests --check && uv run ruff check ./app ./tests"
typecheck = "uv run mypy ./app ./tests"
test = "uv run task lint && uv run task typecheck && uv run coverage run -m pytest -vv && uv run coverage html && uv run coverage xml"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "pymongo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aws_embedded_metrics.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.uv]
exclude-newer = "1 week"
default-groups = ["dev"]
